<resources>
    <string name="app_name">Marvel Time</string>
    <string name="AindaNaoMembroRegistre">Ainda não é membro? Registre-se aqui</string>
    <string name="usuarioLogin">Usuário</string>
    <string name="quiz_homem_aranha">Você sabe tudo sobre o Homem Aranha?</string>
    <string name="perguntaUm">Qual o nome do meio de Peter Paker?</string>
    <string name="fragment_resposta_um">Fleck</string>
    <string name="fragment_resposta_quatro">Stark</string>
    <string name="fragment_resposta_tres">Benjamin</string>
    <string name="fragment_resposta_dois">Wayne</string>
    <string name="cadastro">Cadastre-se e comece a diversão:</string>
    <string name="nome_completo">Nome completo</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="confirma_senha">Confirme a senha</string>
    <string name="quiz_homem_ferro">Você sabe tudo sobre o Homem de Ferro?</string>
    <string name="quiz">QUIZ</string>
    <string name="quiz_spider_man">Você sabe tudo sobre o Homem Aranha?</string>
    <string name="quiz_thor">Você sabe tudo sobre o Thor?</string>
    <string name="quiz_capitao">Você sabe tudo sobre o Capitão América?</string>
    <string name="preencher_campos">Por favor, preencha todos os campos</string>
    <string name="preencher_nome">Por favor, preencha o nome completo para cadastro no Marvel Time</string>
    <string name="inserir_email">Por favor, insira um e-mail válido</string>
    <string name="confirmar_senhas_iguais">Os dados inseridos nos campos Senha e Confirme sua senha, devem ser iguais. Tente novamente.</string>
    <string name="regra_senha">A senha deve conter pelo menos 6 caracteres, uma letra maiuscula e minuscula, um número e um caracter especial.</string>
    <string name="registre_se">Ainda não é membro? [Registre-se aqui]</string>
    <string name="nome">nome</string>
    <string name="pergunta">pergunta</string>
    <string name="alt_1">alternativa1</string>
    <string name="alt_2">alternativa2</string>
    <string name="alt_3">alternativa3</string>
    <string name="alt_4">alternativa4</string>
    <string name="resposta">resposta</string>
    <string name="perguntas">perguntas</string>
    <string name="json">perguntas.json</string>
    <string name="resp_corretas">\u0020 questões corretas</string>
    <string name="_80">80%</string>
    <string name="quest_corretas">3/5 questões corretas</string>
    <string name="resultado">Resultado:</string>
    <string name="compartilhe_resultado">Mostre sua força e compartilhe o resultado!</string>
    <string name="marvel">Conheça mais sobre a Marvel e seus Super-heróis, baixe o App Marvel Time no Google Play e divirta-se!</string>
    <string name="result">Veja, esse foi o meu resultado no Quiz Marvel! Baixe o App Marvel Time no Google Play e teste os seus conhecimentos também!</string>
    <string name="questoes_corretas">/5 questões corretas!</string>
    <string name="favoritos">Favoritos</string>
    <string name="logo">Logo</string>
    <string name="item">item</string>
    <string name="bem_vindo">Bem-vindo ao Marvel Time!</string>
    <string name="entrar">ENTRAR</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="description_iv_logo">Logo do aplicativo</string>
    <string name="description_sair">Botão sair</string>
    <string name="personagem">PERSONAGEM</string>
    <string name="description_personagens_background">Background com vários personagens da Marvel</string>
    <string name="compartilhar">Compartilhar</string>
    <string name="favoritar">Favoritar</string>
    <string name="description_item_favoritado">Imagem do item favoritado</string>
    <string name="salvar_perfil">SALVAR PERFIL</string>
    <string name="foto_usuario">Foto do usuário</string>
    <string name="favoritado"> Adicionado as favoritos</string>
    <string name="correto">correto</string>
    <string name="errado">errado</string>
    <string name="titulo">titulo</string>
    <string name="erro_api">Erro ao buscar dados da API. \nVerifique se há conexao com a Internet!</string>
    <string name="erro_bd">Problema ao carregar Personagens do banco de dados</string>
    <string name="desfavoritado">Item desfavoritado com sucesso!</string>
    <string name="falhagoogle">Falha ao tentar logar com o Google</string>
    <string name="facebook_app_id">827026691132358</string>
    <string name="fb_login_protocol_scheme">fb827026691132358</string>
    <string name="fb_cancelado">Ação cancelada pelo Usuário</string>
    <string name="path_fav">favoritos/</string>
    <string name="update_sucss">Perfil atualizado com sucesso!</string>
    <string name="update_error">Falha ao salvar Perfil.</string>
    <string name="erro_favoritar">Item já favoritado!</string>
    <string name="erro_conexao">Por Favor verifique sua conexão.</string>
    <string name="simbolo_percento">%</string>
    <string name="simbolo_barra">/</string>
    <string name="perm_facebook">public_profile</string>
    <string name="http">http://</string>
    <string name="https">https://</string>
    <string name="falha_facebook">Falha de Autenticação. Ja existe uma conta com este email.</string>
</resources>
