<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PerguntasQuizFragment"
    android:background="@drawable/backgroundquiz"
    android:id="@+id/fragment_layout_quiz">

    <TextView
        android:id="@+id/fragment_titulo_principal"
        android:layout_width="384dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:fontFamily="@font/lato_bold_italic"
        android:gravity="center"
        android:text="@string/sabe_homem_aranha"
        android:textColor="@color/branco"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/fragment_background_imageview_perguntas"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:background="@color/backgroundBrancoComOpacidade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_titulo_principal" />

    <TextView
        android:id="@+id/fragement_textview_pergunta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_bold"
        android:text="@string/perguntaUm"
        android:textColor="@color/preto"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/fragment_background_imageview_perguntas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fragment_background_imageview_perguntas" />

    <Button
        android:id="@+id/fragment_button_alternativaUm"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/round_button"
        android:fontFamily="@font/lato_black"
        android:text="@string/fragment_resposta_um"
        android:textColor="@color/branco"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_background_imageview_perguntas" />

    <Button
        android:id="@+id/fragment_button_alternativaDois"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/round_button"
        android:fontFamily="@font/lato_black"
        android:text="@string/fragment_resposta_dois"
        android:textColor="@color/branco"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_button_alternativaUm" />

    <Button
        android:id="@+id/fragment_button_alternativaTres"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/round_button"
        android:fontFamily="@font/lato_black"
        android:text="@string/fragment_resposta_tres"
        android:textColor="@color/branco"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_button_alternativaDois" />

    <Button
        android:id="@+id/fragment_button_alternativaQuatro"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/round_button"
        android:fontFamily="@font/lato_black"
        android:text="@string/fragment_resposta_quatro"
        android:textColor="@color/branco"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_button_alternativaTres" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fragment_floatingActionButton_voltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="100dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/setaesquerda"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_button_alternativaQuatro" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fragment_floatingActionButton_proximo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/setadireita"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_button_alternativaQuatro" />
</androidx.constraintlayout.widget.ConstraintLayout>